--- a/index.html
+++ b/index.html
@@ -5,20 +5,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/CVCSS.css">
-    <title>CV</title>
+    <title>CV - Raphaël Alizier</title>
 </head>
 
 <body>
-    <h1> Profil </h1>
-    <p><strong>Étudiant en 1ére année de Bachelor, passionnée de développement web, je cherche un dans ce même
-            domaine</strong></p>
+    <header>
+        <nav class="navbar">
+            <ul class="nav-list">
+                <li><a href="#Presentation"> Présentation</a></li>
+                <li><a href="#Competences"> Mes compétences</a></li>
+                <li><a href="#Realisation"> Mes réalisations</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="Presentation" class="section">
+        <div class="presentation">
+            <h1> Profil </h1>
+            <h2><strong>Raphaël Alizier</h2>
+            <ul class="presentation-list">
+                <li>Étudiant en 1ére année de Bachelor, passionnée de développement web, je cherche un stage dans ce même
+                    domaine</strong> </li>
+                <li>né le 10/11/2006 </li>
+                <li>téléphone : 07 68 86 74 66 </li>
+                <li>mail : raphalizier2@gmail.com </li>
+                <li>adresse : 60190 Arsy </li>
+                <li>GitHub : <a href="https://github.com/raphali">github.com/raphali</a></li>
+            </ul>
+        </div>
+    </section>
+    <p>
+    <section id="Presentation" class="section">
     <h1> Formation </h1>
-    <p><strong>Sept 2024 - Sept 2027</strong> Préparation d’un Bachelor en développement web, Ecole
+    <ul class="formation-list">
+        <li><strong>Sept 2024 - Sept 2027</strong> Préparation d’un Bachelor en développement web, Ecole
         Supérieure des Métiers du Numériques à Compiègne et du
-        Titre RNCP Bac +3 – Niveau 6 </p>
+        Titre RNCP Bac +3 – Niveau 6 </li>
+        <li><strong>2021 - 2024 Lycée Charles de Gaulle à Compiègne (60) <br> Spécialités :</strong>
+        <ul>
+            <li>Numérique Science Informatique (Terminale)</li>
+            <li>Littérature Anglais (Terminale)</li>
+            <li>Mathématiques (Première)</li>
+        </ul><br>
+    -Option Maths et AS en Terminale <br>
+    -Baccalauréat général obtenu en Juin 2024 <br></li>
+    
+        <li><strong>2017-2021 Collège Abel Didelet Estrées-St-Denis (60)</strong><br>DNB obtenu mention Bien, Certification PIX 2021</li>
+    </ul>
+    </section>
+    <section id="Competences" class="section">
     <h1>Compétences numériques</h1>
-
+    <ul>
+        <li>Python</li>
+        <li>HTML/CSS</li>
+    </ul>
+    </section>
+    <section id="Experiences" class="section">
     <h1>Expérience professionnelle</h1>
+    <strong>Stage d’observation de 3éme:</strong> février 2021 - Usine Unilever, Le Meux <br>
+    Projet réalisé en terminal :<strong>Blackjack</strong><br> Jeu de carte réalisé dans le but de travailler nos compétences en Python
+    </section>
+    <section id="Realisation" class="section">
+    <h1>Mes réalisations</h1>
+    </section>
+    </p>
 </body>
 
 </html>
