--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 
@@ -10,29 +9,28 @@
 </head>
 
 <body>
+    <nav>
+        <!-- Création du menu burger pour téléphone et nav pour ordinateur -->
+        <div class="menu-burger">
+            <input type="checkbox" id="hamburger">
+            <label id="hamburger-logo" for="hamburger">☰</label>
+            <nav class="mobile-menu">
+                <!-- renvoie sur la même page à des endroits différents -->
+                <a href="index.html">Accueil</a>
+                <a href="#Presentation">Presentation</a>
+                <a href="#Competences">Mes compétences</a>
+                <a href="#Experiences">Mon expériences professionnelle</a>
+            </nav>
+        </div>
+        <ul class="links">
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="#Presentation">Presentation</a></li>
+            <li><a href="#Competences">Mes compétences</a></li>
+            <li><a href="#Experiences">Mon expériences professionnelle</a></li>
+        </ul>
+    </nav>
     <div class="container">
-        <nav class="navbar">
-            <div class="menu-burger">
-                <input type="checkbox" id="hamburger">
-                <label id="hamburger-logo" for="hamburger">☰</label>
-                <nav class="mobile-menu">
-                    <!-- renvoie sur la même page à des endroits différents -->
-                    <a href="#Presentation">Presentation</a>
-                    <a href="Formation">Formatation</a>
-                    <a href="#Competences">Mes compétences</a>
-                    <a href="#Experiences">Mon expériences professionnelle</a>
-                    <a href="#Réalisation">Mes réalisations</a>
-                </nav>
-            </div>
-            <ul class="nav-list">
-                <li><a href="#Presentation"> Présentation</a></li>
-                <li><a href="#Formation"> Formation</a></li>
-                <li><a href="#Competences"> Mes compétences</a></li>
-                <li><a href="#Experiences"> Mon expériences professionnelle</a></li>
-                <li><a href="#Realisation"> Mes réalisations</a></li>
-            </ul>
-        </nav>
-
+        <!-- Partie présentation -->
         <section id="Presentation" class="section">
             <h1> Profil </h1>
             <p class="profil">
@@ -42,13 +40,15 @@
             </p>
         </section>
         <p>
+            <!-- Partie Formation -->
         <section id="Formation" class="section">
             <h1> Formation </h1>
-            <ul >
+            <ul>
                 <li><strong>Sept 2024 - Sept 2027</strong> Préparation d’un Bachelor en développement web, Ecole
                     Supérieure des Métiers du Numériques à Compiègne et du
                     Titre RNCP Bac +3 – Niveau 6 </li>
-                <li class="prespe"><strong>2021 - 2024 Lycée Charles de Gaulle à Compiègne (60) <br> Spécialités :</strong>
+                <li class="prespe"><strong>2021 - 2024 Lycée Charles de Gaulle à Compiègne (60) <br> Spécialités
+                        :</strong>
                     <ul class="spe">
                         <li>Numérique Science Informatique (Terminale)</li>
                         <li>Littérature Anglais (Terminale)</li>
@@ -62,6 +62,7 @@
                     Certification PIX 2021</li>
             </ul>
         </section>
+        <!-- Partie compétences -->
         <section id="Competences" class="section">
             <h1>Compétences numériques</h1>
             <ul>
@@ -69,28 +70,31 @@
                 <li>HTML/CSS</li>
             </ul>
         </section>
+        <!-- Partie expériences professionnelle -->
         <section id="Experiences" class="section">
             <h1>Expérience professionnelle</h1>
             <strong>Stage d’observation de 3éme:</strong> février 2021 - Usine Unilever, Le Meux
 
         </section>
+        <!-- Partie réalisations -->
         <section id="Realisation" class="section">
             <h1>Mes réalisations</h1>
             Projet réalisé en terminal :<strong>Blackjack</strong><br> Jeu de carte réalisé dans le but de travailler
             nos compétences en Python
         </section>
         </p>
+        <!-- Partie affichée dans le rectangle blanc -->
         <section id="cote" class="section">
             <h2><strong>Raphaël Alizier</strong></h2><br>
             <p>né le 10/11/2006 <br>
-                téléphone : <a href="tel:+33768867466">07 68 86 74 66</a> <br>
-                mail : <a href="mailto:raphalizier2@gmail.com"> raphalizier2@gmail.com </a><br>
+                téléphone : <a href="tel:+33768867466"><strong>07 68 86 74 66</strong></a> <br>
+                mail : <a href="mailto:raphalizier2@gmail.com"> <strong>raphalizier2@gmail.com</strong> </a><br>
                 adresse : 60190 Arsy <br>
-                GitHub : <a href="https://github.com/raphali">github.com/raphali</a> <br>
+                GitHub : <a href="https://github.com/raphali"> <strong>github.com/raphali</strong></a> <br>
             </p><br>
             <h1>Langues</h1><br>
             <p>Anglais : B2 <br>
-                Espagnol : A2 
+                Espagnol : A2
             </p><br>
             <h1>Points forts</h1>
             <p>Curieux <br>
